# learning-with-ai

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html  local.env  main.py  pyproject.toml  test_app.py  test_cache.py  test_db.py
docs/: prompts.md  tutorial_1.md  tutorial_2.md  tutorial_3.md  tutorial_4.md  tutorial_5.md  tutorial_6.md  tutorial_7.md  tutorial_8.md
